# Z-Ledger

./: .env.example  README.md  doc file.md  pyproject.toml
docs/: DESIGN.md  DOMAIN_NOTES.md  INTERIM_REPORT.md  PROJECT_SCOPE.md
scripts/: _list_mcp_tools.py  _mcp_probe.py  _mcp_probe2.py  applicant_registry.sql  fix_ownership.sql  run_pipeline.py  run_setup.ps1  seed_registry.py  setup_all.sql  setup_db.sql
src/: __init__.py  event_store.py  schema.sql
src/agents/: __init__.py  base_agent.py  credit_analysis_agent.py
src/aggregates/: __init__.py  agent_session.py  audit_ledger.py  compliance_record.py  loan_application.py
src/commands/: __init__.py  handlers.py
src/integrity/: __init__.py  audit_chain.py  gas_town.py
src/mcp/: __init__.py  resources.py  server.py  tools.py
src/models/: __init__.py  events.py
src/projections/: __init__.py  agent_performance.py  application_summary.py  compliance_audit.py  daemon.py
src/registry/: __init__.py  client.py
src/regulatory/: __init__.py  package.py
src/upcasting/: __init__.py  registry.py  upcasters.py
src/what_if/: __init__.py  projector.py
tests/: __init__.py  conftest.py  test_business_rules.py  test_concurrency.py  test_event_store_adapted.py  test_gas_town.py  test_integrity_tamper.py  test_mcp_lifecycle.py  test_narratives_adapted.py  test_projection_slo_high_load.py  test_projections.py  test_upcasting.py
