[project]
name = "z-ledger"
version = "0.1.0"
description = "TRP1 Week 5: Agentic Event Store & Enterprise Audit Infrastructure"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "asyncpg>=0.29",
  "psycopg[binary]>=3.2",
  "pydantic>=2.6",
  "fastmcp>=0.9",
  "anthropic>=0.30",
  "langgraph>=0.1",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

